--- a/INVENTARIO/Views/Configuracion/InformacionPersonal.cshtml
+++ b/INVENTARIO/Views/Configuracion/InformacionPersonal.cshtml
@@ -42,6 +42,15 @@
 </style>
 
 <div class="container mt-5">
+    <!-- Mensajes si los hay -->
+    @if (TempData["MensajePerfil"] != null)
+    {
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            @TempData["MensajePerfil"]
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        </div>
+    }
+
     <h2>Información del Usuario</h2>
     <div class="row">
         <div class="col-md-6 form-group">
@@ -52,7 +61,6 @@
             <label class="form-label">Identificación:</label>
             <input type="text" class="readonly-input" value="@Model.Identificacion" readonly />
         </div>
-
         <div class="col-md-6 form-group">
             <label class="form-label">Nombre:</label>
             <input type="text" class="readonly-input" value="@Model.Nombre" readonly />
@@ -61,7 +69,6 @@
             <label class="form-label">Apellido:</label>
             <input type="text" class="readonly-input" value="@Model.Apellido" readonly />
         </div>
-
         <div class="col-md-6 form-group">
             <label class="form-label">Teléfono:</label>
             <input type="text" class="readonly-input" value="@Model.Telefono" readonly />
@@ -70,7 +77,6 @@
             <label class="form-label">Correo:</label>
             <input type="email" class="readonly-input" value="@Model.Correo" readonly />
         </div>
-
         <div class="col-md-6 form-group">
             <label class="form-label">Fecha de Nacimiento:</label>
             <input type="text" class="readonly-input" value="@Model.Fechadenacimiento.ToString("yyyy-MM-dd")" readonly />
