--- a/INVENTARIO/Views/Configuracion/Configuracion.cshtml
+++ b/INVENTARIO/Views/Configuracion/Configuracion.cshtml
@@ -105,7 +105,7 @@
             <!-- Contenido -->
             <div class="col-md-9 content position-relative">
                 <!-- Botón volver al menú -->
-                <a href="/Home/Menu" class="btn btn-outline-light btn-sm btn-volver">
+                <a href="/Home/Entrada" class="btn btn-outline-light btn-sm btn-volver">
                     <i class="bi bi-arrow-left-circle"></i> Volver al menú
                 </a>
 
